--- a/src/App.css
+++ b/src/App.css
@@ -357,6 +357,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   text-align: center;
   width: 56%;
 }
+proj-imgbx
 .project .nav.nav-pills {
   width: 72%;
   margin: 0 auto;
